--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_javafx_backend?useLegacyDatetimeCode=false&serverTimezone=CET
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
 
